Minor Fix Adjusment on spacing

--- a/client/src/components/Template/NavQuickPunch/NavQuickPunch.css
+++ b/client/src/components/Template/NavQuickPunch/NavQuickPunch.css
@@ -27,6 +27,15 @@ span .nav-clock{
   
 }
 
+
+.nav-time-clock{
+    position: absolute;
+    /* padding-left: 33px !important; */
+    /* border: #fff;
+    border-width: thin; */
+  
+}
+
 .nav-date{
     font-size:0.8rem;
     color: #fff !important;
@@ -47,15 +56,15 @@ span .nav-clock{
 .timezone-item{
     position: absolute;
     top: 24px;
-    right: 13px;
-    font-size: 7px;
+    right: 25px;
+    font-size: 8.5px;
 }
 
 .timezone-item-tooltip{
     position: absolute;
-    top: 32px;
-    right: 15px;
-    font-size: 8px;
+    top: 33px;
+    right: 28px;
+    font-size: 10px;
 }
 
 
